<resources>
    <string name="app_name">FTC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>

    <!-- Strings related to login -->
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phoneNumber">This Phone Number address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phoneNumberHint">start with +966</string>
    <string name="codeReceived">Code Received</string>
    <string name="signin_next">Next</string>
    <string name="addPost">Add Post</string>
    <string name="verifyLogin">Verify Mobile</string>
    <string name="Log_in">FoodTrucks Tracker</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="workingHours">Working Hours</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="lorem"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="google_maps_key">AIzaSyA4QKFe0wYlrx74kHWO9WnKo6V9_tgon3I</string>
</resources>
